<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="260dp"
    android:layout_height="150dp"
    android:elevation="10dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_background">

    <!-- 자리추가 텍스트 -->
    <TextView
        android:id="@+id/seat_add_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seat_add2"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/seat_add_text_guide_start"
        app:layout_constraintEnd_toEndOf="@id/seat_add_text_guide_end"
        app:layout_constraintTop_toTopOf="@id/seat_add_text_guide_top"
        app:layout_constraintBottom_toBottomOf="@id/seat_add_text_guide_bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seat_add_text_guide_start"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.39"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seat_add_text_guide_end"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.61"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seat_add_text_guide_top"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seat_add_text_guide_bottom"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <!-- 몇인용 자리 생성 -->
    <EditText
        android:id="@+id/seat_make_edittext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/seat_make"
        android:textSize="12sp"
        android:textColorHint="@color/gray2"
        android:paddingLeft="10dp"
        android:background="@drawable/dialog_edittext_background"
        app:layout_constraintStart_toStartOf="@id/seat_make_edittext_guide_start"
        app:layout_constraintEnd_toEndOf="@id/seat_make_edittext_guide_end"
        app:layout_constraintTop_toTopOf="@id/seat_make_edittext_guide_top"
        app:layout_constraintBottom_toBottomOf="@id/seat_make_edittext_guide_bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seat_make_edittext_guide_start"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seat_make_edittext_guide_end"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seat_make_edittext_guide_top"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/seat_make_edittext_guide_bottom"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <!-- 취소 버튼 -->
    <TextView
        android:id="@+id/btn_cansel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cancel"
        android:textColor="@color/purple"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/btn_cansel_guide_start"
        app:layout_constraintEnd_toEndOf="@id/btn_cansel_guide_end"
        app:layout_constraintTop_toTopOf="@id/btn_cansel_guide_top"
        app:layout_constraintBottom_toBottomOf="@id/btn_cansel_guide_bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_cansel_guide_start"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.695"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_cansel_guide_end"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_cansel_guide_top"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.765"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_cansel_guide_bottom"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>

    <!-- 확인 버튼 -->
    <TextView
        android:id="@+id/btn_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/check"
        android:textColor="@color/purple"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/btn_check_guide_start"
        app:layout_constraintEnd_toEndOf="@id/btn_check_guide_end"
        app:layout_constraintTop_toTopOf="@id/btn_check_guide_top"
        app:layout_constraintBottom_toBottomOf="@id/btn_check_guide_bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_check_guide_start"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.855"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_check_guide_end"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.955"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_check_guide_top"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.765"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btn_check_guide_bottom"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>

</androidx.constraintlayout.widget.ConstraintLayout>